--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+heading: '欢迎'
+subheading: '欢迎访问无人区科技南京有限公司！'
 banner: 'default'
 ---
 
