--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -2,5 +2,17 @@
 layout: framework
 sidebar: tag-list
 ---
+      <h1>联系我</h1>
+
+      
+      <p><strong>电话：l779856O529</strong></p>
+<hr>
+<p><strong>邮箱：sales@nomanland.tech</strong></p>
+<hr>
+<p><strong>微信二维码</strong></p>
+<p>
+  <img src="assets/images/wechat.jpg">
+  
+</p>
 
 {%- endif -%}
