--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -3,14 +3,41 @@ layout: framework
 sidebar: category-list
 ---
 
-{%- if site.posts.size > 0 -%}
+<article>
+<header>
+    
+<h1>合作伙伴</h1>
+    
+</header>
 
-  {%- include functions.html func='log' level='debug' msg='Get value' -%}
-  {%- include functions.html func='get_categories' -%}
-  {% assign categories = return %}
+<p>
 
-  {% assign keys = categories %}
-  {% assign field = 'categories' %}
-  {%- include views/segments.html -%}
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/Tesla.jpg">
 
-{%- endif -%}
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/AIRBUS.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/SINOPEC.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/BMW.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/PLANAVY.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/BAOSTEEL.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/COSCO.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/CRCC.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/SHENHUA.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/XIAONIAO.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/IQIYI.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/ALIYUN.jpg">
+
+<img class="borderless lazyloaded" loading="lazy" src="assets/images/PINGMEI.jpg">
+
+</p>
+
+</article>
