--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -2,13 +2,41 @@
 layout: framework
 sidebar: category-list
 ---
+<div class="filler">
+      
 
-<div class="articles">
-  {% if page.banner == nil %}
-    {% assign banner = page.title %}
-  {% endif %}
+  <main class="list">
+  
+    <h1>产品介绍</h1>
+    
 
-  {{ content }}
+      <ul class="posts">
+        
+          <li>
+            <a class="btn" href="/posts/satellite/">
+              <p>6G 边缘云</p>
+              
+            </a>
+          </li>
+        
+          <li>
+            <a class="btn" href="/posts/arvr/">
+              <p>AR/VR 5G 边缘云</p>
+              
+            </a>
+          </li>
+        
+          <li>
+            <a class="btn" href="/posts/aiqiyi/">
+              <p>爱奇艺 5G 边缘云</p>
+              
+            </a>
+          </li>
+        
+      </ul>
+ 
+    
+  </main>
+  
 
-  {% include views/pagination.html %}
 </div>
