--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -1,8 +1,4 @@
----
-layout: framework
-sidebar: archive-list
----
-   
+  
   <div class="wrapper">
 
   
@@ -17,17 +13,11 @@ sidebar: archive-list
           </li>
         
           <li>
-            <a class="btn" href="/posts/arvr/">
-              <p>AR/VR 5G 边缘云</p>
-              
-            </a>
+            <a class="button" href="/posts/arvr/">AR/VR 5G 边缘云</a>
           </li>
         
           <li>
-            <a class="btn" href="/posts/aiqiyi/">
-              <p>爱奇艺 5G 边缘云</p>
-              
-            </a>
+            <a class="button" href="/posts/aiqiyi/">爱奇艺 5G 边缘云</a>
           </li>
         
       </ul>
