--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -6,13 +6,13 @@ layout: framework
     <h1>产品介绍</h1>
         
           <li>
-            <a href="/posts/satellite/" class="button">边缘云</a>
+            <a href="satellite/2018/12/05/an-exhibit-of-markdown.html" class="button">边缘云</a>
           </li>
         
           <li>
-            <a class="button" href="/posts/arvr/">AR/VR 5G 边缘云</a>
+            <a class="button" href="arvr/2018/12/04/arvr.html">AR/VR 5G 边缘云</a>
           </li>
         
           <li>
-            <a class="button" href="/posts/aiqiyi/">爱奇艺 5G 边缘云</a>
+            <a class="button" href="aiqiyi/2018/12/06/aiqiyi.html">爱奇艺 5G 边缘云</a>
           </li>
